commit 022cde4372c4517ccef56cac9a3b7562364faf1a
Date:   Tue Apr 12 23:50:04 2016 +0300

    Added wiki/BehaviorDrivenDevelopment.creole

commit 14700aa9a8880d18a9ae6a2677fa8c160f5e2f96
Date:   Mon Apr 11 23:48:39 2016 +0300

    Added wiki/StepNamingConventions.creole

commit 5c0e43d9357e0dec521a8fd8851b89d71cab2771
Date:   Sat Apr 9 18:15:44 2016 +0300

    Fixed some github.com breakage

commit b47c4f0f444b7a23f9d6f26b7fb21408e28ee6fd
Date:   Sat Apr 9 00:30:20 2016 +0300

    Renamed project to behaving.trytond

commit c30c08e312683bfb37d1b65e6729cd2b25bca85c
Date:   Sat Apr 9 00:02:05 2016 +0300

    Updated doc

commit cb172a19684d4a7044b385ecfb5f434ddc8cbbe8
Date:   Thu Apr 7 23:58:45 2016 +0300

    Updated documentaion

commit df6e5194dc4dbb2c83a3f3e268870a85d7736b32
Date:   Thu Apr 7 17:47:43 2016 +0300

    Added setup.py

commit 70f0166cc2fdcb8ce0f4f24132405ef3465a257d
Date:   Thu Apr 7 17:36:17 2016 +0300

     moved python source to src/behaving/trytond/steps/support

commit aa657542f02a4107c952b8b4b8b9b885a22490d7
Date:   Thu Apr 7 17:28:50 2016 +0300

    Updated documentation for new layout

commit b38aded85ba4d6859b9605be2be1ff18755aee6e
Date:   Thu Apr 7 06:28:05 2016 +0300

    Restructured file for the behaving namespace

commit 20ea6723e4186b93ca9ecbb7ee3aff31ffd071cf
Date:   Wed Apr 6 21:19:22 2016 +0300

    Prepare for renaming of package to behaving.trytond

commit b6864cdc3b27c13212ddf9c68ba9105b0fc10c13
Date:   Wed Apr 6 21:09:53 2016 +0300

    Renamed wiki pages

commit e0919bfa47e52914d4c791302c8bb47e4b6cf5fb
Date:   Sun Apr 3 06:57:46 2016 +0300

    Improved to doc formatting

commit d3e3d33f6fb55ca2338708160fd9b73f565ef0a7
Date:   Sun Apr 3 06:36:40 2016 +0300

    Renamed wiki/Features- to wiki/Features_

commit 515937fdb6a99c75a4d7802481adce537c9ef093
Date:   Thu Mar 24 21:03:41 2016 +0200

    Fixing account_asset - wip

commit 58271f76fe982085df93d8d6f047d7d65439cda8
Date:   Wed Mar 23 19:37:42 2016 +0200
