@@ -1,0 +1,4 @@
+include README.rst
+include CHANGELOG.txt
+include LICENSE.txt
+recursive-include docs *.html *.css *.png *.gif
