@@ -58,3 +58,12 @@ For info on Creole, see http://wikicreole.org/
 
 Please file any bugs in the
 [[issues tracker|https://github.com/lampmantech/behaving.trytond/issues]].
+
+
+This file is automatically generated from the source code: do not edit.
+
+
+This file is automatically generated from the source code: do not edit.
+
+
+This file is automatically generated from the source code: do not edit.
