@@ -14,3 +14,12 @@ will be following.
 
 * Embed the heading like {{{|name|value|}}} in the step to make sure the
 person using the step knows what is expected.
+
+
+This file is automatically generated from the source code: do not edit.
+
+
+This file is automatically generated from the source code: do not edit.
+
+
+This file is automatically generated from the source code: do not edit.
